<resources>
    <string name="app_name">ReBuy</string>

    <!--引导界面-->
    <string name="desc_logo">NEUQ校园二手交易平台</string>
    <string name="footer_content">Copyright © 2016 NEUQer团队. All rights reserved.</string>

    <!--登录界面-->
    <string name="hint_account">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>

    <!--注册界面-->
    <string name="btn_cancel">取消</string>
    <string name="hint_confirm_password">请确认密码</string>

    <!--HomeFragment-->
    <string name="txt_look_around">随便逛逛</string>
    <string name="txt_goods_delivered">有货出手</string>
    <string name="txt_wonderful_activity">精彩活动</string>
    <string name="txt_guess_like">猜你喜欢</string>
    <string name="txt_festival">端午节带你High</string>
    <string name="txt_rebuy_festival">ReBuy端午节</string>
    <string name="txt_charity_sale">大四义卖</string>
    <string name="txt_gift">来自学长学姐最后的礼物</string>
    <string name="txt_drifting_bookstore">漂流书屋</string>
    <string name="txt_drifting_together">让我们一起把书漂起来~</string>
    <string name="txt_yuan">￥</string>
    <string name="txt_lace_dress">淑女学生蕾丝连衣裙，修身甜美小清新</string>

    <!--AuctionFragment-->
    <string name="txt_deadline">截止时间：</string>
    <string name="txt_person_num">参与人数：</string>

    <!--MessageFragment-->
    <string name="txt_name">阿狸哈哈哈</string>
    <string name="txt_cancel_order">取消订单</string>
    <string name="txt_message_data">2016.03.05</string>
    <string name="txt_message_time">18:22</string>

    <!--MineFragment-->
    <string name="txt_head_name">大脸猫</string>
    <string name="txt_personal_signature">大脸猫大脸猫爱吃鱼，这是一条很有个性的个性签名</string>
    <string name="txt_personality_data">个人资料</string>
    <string name="txt_shop">我的小店</string>
    <string name="txt_order">我的订单</string>
    <string name="txt_collection">我的收藏</string>
    <string name="txt_setting">设置</string>

    <!--LookAroundActivity-->
    <string name="txt_yikoujia">一口价</string>
    <string name="txt_exchange">物换物</string>
    <string name="txt_auction">拍卖品</string>
    <string name="txt_life_use">生活用品</string>
    <string name="txt_study_use">学习用品</string>
    <string name="txt_clothes_shoe">服饰鞋包</string>
    <string name="txt_electronic">数码产品</string>
    <string name="txt_other">&#160;&#160;&#160;&#160;其他&#160;&#160;&#160;&#160;</string>
    <string name="num_million">1000000</string>
    <string name="num_995">995</string>

    <!--GoodsDetailActivity-->
    <string name="txt_goods_detail">商品详情</string>
    <string name="txt_contact_seller">联系卖家</string>
    <string name="txt_auction_price">竞拍价</string>
    <string name="txt_buy_clothes_title">这是一个买衣服的标题类的东西我希望他一行是十七个字，两行</string>
    <string name="txt_add_price">每次加价￥2元</string>
    <string name="txt_bala">巴拉巴啦啦巴巴</string>
    <string name="txt_grade">13级</string>
    <string name="txt_major">计算机科学与技术</string>
    <string name="txt_telphone">Tel:11122223333</string>
    <string name="txt_qq">QQ:1234567890</string>
    <string name="txt_before_time">25分钟前</string>
    <string name="txt_introduction">这是那个东西的介绍文案，就是要介绍很多很多一行差不多有二十三个字，行数不限，对，就是不限</string>
    <string name="txt_book1">1.《哈哈哈哈哈哈哈》</string>
    <string name="txt_book2">2.《啊呀呀呀呀呀呀呀呀啊呀呀呀》</string>
    <string name="txt_book3">3.《AD动手大赛第十大苏打赛上的大赛得分》</string>

    <!--PublishMessageActivity-->
    <string name="txt_publish_message">发布消息</string>
    <string name="txt_confirm_release">确认发布</string>
    <string name="hint_publish_title">标题</string>
    <string name="txt_publish_describe">描述一下你的物品</string>
    <string name="txt_publish_phone">电话</string>
    <string name="hint_publish_click_input">点击输入</string>
    <string name="txt_publish_qq">QQ号</string>
    <string name="txt_publish_classification">分类</string>
    <string name="txt_publish_sale">出售方式</string>
    <string name="cb_publish_buy">买东西</string>
    <string name="cb_publish_sell">换东西</string>
    <string name="cb_publish_auction">拍卖</string>
    <string name="txt_publish_number">数量</string>
    <string name="txt_publish_auction">拍卖</string>
    <string name="txt_publish_start_price">起价</string>
    <string name="txt_publish_add_price">加价</string>
    <string name="txt_publish_end_time">结束时间</string>
    <string name="txt_publish_time">2015-11-12 11:11</string>

    <!--MessageDetailActivity-->
    <string name="txt_message_detail">消息详情</string>
    <string name="time_2015_11_04">2015.11.04</string>
    <string name="num_10000">10000</string>
    <string name="txt_application">申请：</string>
    <string name="txt_application_reason">不想要了，就是这么任性</string>
    <string name="txt_reason">原因：</string>
    <string name="txt_agree_application">同意申请</string>

    <!--PersonInfoActivity-->
    <string name="txt_personal_data">个人资料</string>
    <string name="txt_info_nickname">昵称</string>
    <string name="txt_info_phone">手机号</string>
    <string name="phone_18712345678">18712345678</string>
    <string name="txt_info_qq">QQ</string>
    <string name="num_123456789">123456789</string>
    <string name="txt_info_signature">个性签名</string>
    <string name="txt_signature">这是我的个性签名啊</string>
    <string name="txt_info_portrait">头像</string>

    <!--MineOrderAdapter-->
    <string name="txt_myOrder">我的订单</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--MineShopActivity-->
    <string name="txt_mine_shop">阿狸的小店</string>
    <string name="txt_mine_on_sale">在售商品5件</string>
    <string name="txt_mine_had_sale">已售商品10件</string>
    <string name="txt_mine_shop_introduction">这是店铺的介绍，，物美价廉，经济实惠，总之就是很多很多介绍</string>
    <string name="txt_mine_onprocess">进行中...</string>
    <string name="txt_mine_finish">已完成</string>

    <!--MineOrderActivity-->
    <string name="txt_order_agree_refund">同意退款</string>

    <!--MineCollectionActivity-->
    <string name="txt_mycollection">我的收藏</string>

    <!--MineSettingActivity-->
    <string name="txt_mine_setting">设置</string>
    <string name="txt_picture_quality">图片质量</string>
    <string name="txt_clear_cache">清除缓存</string>
    <string name="txt_coming_soon">敬请期待</string>
    <string name="txt_about_us">关于我们</string>
    <string name="txt_problem_feedback">问题反馈</string>
    <string name="txt_share_friends">分享给朋友</string>
    <string name="txt_logout">退出登录</string>
</resources>
