<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.rebuy.widget.TitleLayout
        app:isShowBack="true"
        app:titleName="@string/txt_personal_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_s12"/>

    <View
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_s2" />

    <LinearLayout
        android:paddingLeft="@dimen/padding_s2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_s10">
        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/txt_info_nickname"
            android:textColor="@color/light_yellow"
            android:textSize="@dimen/size_s4"
            android:layout_width="@dimen/width_s18"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/txt_head_name"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_s4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"/>

    <LinearLayout
        android:paddingLeft="@dimen/padding_s2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_s10">
        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/txt_info_phone"
            android:textColor="@color/light_yellow"
            android:textSize="@dimen/size_s4"
            android:layout_width="@dimen/width_s18"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/phone_18712345678"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_s4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"/>

    <LinearLayout
        android:paddingLeft="@dimen/padding_s2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_s10">
        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/txt_info_qq"
            android:textColor="@color/light_yellow"
            android:textSize="@dimen/size_s4"
            android:layout_width="@dimen/width_s18"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/num_123456789"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_s4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"/>

    <LinearLayout
        android:paddingLeft="@dimen/padding_s2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_s10">
        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/txt_info_signature"
            android:textColor="@color/light_yellow"
            android:textSize="@dimen/size_s4"
            android:layout_width="@dimen/width_s18"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/txt_signature"
            android:gravity="center_vertical"
            android:textSize="@dimen/size_s4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"/>

    <LinearLayout
        android:paddingLeft="@dimen/padding_s2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_s18">
        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/txt_info_portrait"
            android:textColor="@color/light_yellow"
            android:textSize="@dimen/size_s4"
            android:layout_width="@dimen/width_s18"
            android:layout_height="wrap_content"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_head"
            android:layout_width="@dimen/width_s15"
            android:layout_height="@dimen/height_s15"/>
    </LinearLayout>

    <View
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>