<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.rebuy.widget.TitleLayout
        app:isShowBack="true"
        app:titleName="@string/txt_myOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_s12"/>

    <LinearLayout
        android:layout_margin="@dimen/margin_s2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_margin="@dimen/margin_s2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/txt_mine_shop"
                android:textSize="@dimen/size_s4"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_s2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/txt_mine_on_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="@dimen/margin_s4"
                    android:text="@string/txt_mine_had_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/txt_mine_shop_introduction"
        android:layout_marginLeft="@dimen/margin_s2"
        android:layout_marginRight="@dimen/margin_s2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_margin="@dimen/margin_s2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:text="@string/txt_telphone"
            android:textSize="@dimen/size_s4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:text="@string/txt_qq"
            android:textSize="@dimen/size_s4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        app:tabTextColor="@color/grey"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/yellow"
        app:tabIndicatorHeight="@dimen/height_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>